White spacing issues fixed and Added a Poppins font

--- a/examples/classic/src/components/HomepageFeatures.module.css
+++ b/examples/classic/src/components/HomepageFeatures.module.css
@@ -3,7 +3,7 @@
 .features {
   display: flex;
   align-items: center;
-  padding: 12rem 0;
+  padding: 8rem 0;
   width: 100%;
 }
 
