--- a/examples/classic/src/pages/index.module.css
+++ b/examples/classic/src/pages/index.module.css
@@ -4,9 +4,13 @@
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
  */
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+ *{
+  font-family: 'Poppins', sans-serif;
+   }
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 5rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -22,4 +26,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
+
